# winecollector

./: .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.agents/rules/: project.md  scraper.md  security.md
.claude/rules/: docker.md  frontend.md  git.md  python-style.md  testing.md
.compozy/tasks/winecollector/: _prd.md  _tasks.md  _techspec.md  task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_16.md  task_17.md
.compozy/tasks/winecollector/adrs/: adr-001.md  (+7 more)
migrations/: env.py
migrations/versions/: 20260521_1241_create_users_table.py  20260521_2246_create_wines_table.py  20260522_1223_create_wine_tastings_table.py
src/winecollector/: __init__.py  config.py  database.py  main.py  templates_engine.py
src/winecollector/auth/: __init__.py  backend.py  dependencies.py  manager.py  user_db.py
src/winecollector/models/: __init__.py  tasting.py  user.py  wine.py
src/winecollector/routers/: __init__.py  auth.py
src/winecollector/schemas/: __init__.py  auth.py  export.py  tasting.py  wine.py
src/winecollector/services/: __init__.py
src/winecollector/templates/: base.html
tests/: conftest.py
tests/integration/: test_alembic.py  test_auth_flow.py  test_auth_protection.py  test_compose_boot.py  test_database.py  test_schemas_round_trip.py  test_tastings_migration.py  test_users_migration.py  test_wines_migration.py
tests/unit/: test_app_import.py  test_auth_backend.py  test_config.py  test_database.py  test_export_schemas.py  test_normalize_url.py  test_parse_aging_potential.py  test_pyproject.py  test_signup_gate.py  test_tasting_model.py  test_tasting_schemas.py  test_user_manager.py  test_user_model.py  test_wine_model.py  test_wine_schemas.py
(+5 files in other folders)
