[tool.poetry]
name = "winecollector"
version = "0.1.0"
description = "Personal wine cellar manager — archive wines bought from wine.com.br before the retailer takes them down."
authors = ["Giovani Rech <giovani@tevaindices.com.br>"]
packages = [{ include = "winecollector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
"sqlalchemy" = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
"fastapi-users" = { extras = ["sqlalchemy"], version = "^14.0.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.0"
jinja2 = "^3.1.0"
python-multipart = ">=0.0.20,<1.0.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
respx = "^0.21.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["winecollector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/winecollector"]
omit = ["*/migrations/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
